--- a/app/src/main/res/layout/activity_landmark_recycle.xml
+++ b/app/src/main/res/layout/activity_landmark_recycle.xml
@@ -6,13 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".landmarkRecycle">
 
+
     <LinearLayout
         android:id="@+id/layoutheader"
         android:layout_width="match_parent"
         android:layout_height="?actionBarSize"
         android:background="#f0f0f0"
-        android:orientation="horizontal"
         android:gravity="center_vertical"
+        android:orientation="horizontal"
         android:padding="10dp"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -30,8 +31,47 @@
             android:layout_weight="1"
             android:gravity="center"
             android:text="내 위치 주변"
-            android:textStyle="bold"
-            android:textSize="20sp"></TextView>
+            android:textSize="22sp"
+            android:textStyle="bold"></TextView>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/sortheader"
+        android:layout_width="match_parent"
+        android:layout_height="?actionBarSize"
+        android:layout_marginTop="56dp"
+        android:background="@drawable/underline_background"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:padding="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="30dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="정렬"
+            android:textSize="20sp"
+            android:textStyle="bold">
+
+        </TextView>
+
+        <TextView
+            android:id="@+id/mapbtn"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="30dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="지도"
+            android:textSize="20sp"
+            android:textStyle="bold"></TextView>
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
@@ -43,7 +83,7 @@
         android:padding="5dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/layoutheader">
+        app:layout_constraintTop_toBottomOf="@+id/sortheader">
 
     </androidx.recyclerview.widget.RecyclerView>
 
