리스트, 마크 추가 및 수정

--- a/app/src/main/res/layout/activity_naver_map.xml
+++ b/app/src/main/res/layout/activity_naver_map.xml
@@ -10,6 +10,8 @@
         android:id="@+id/map_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        app:navermap_latitude="37.55093"
+        app:navermap_longitude="127.07544"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
