--- a/app/src/main/res/layout/activity_busan.xml
+++ b/app/src/main/res/layout/activity_busan.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Attractions">
+    tools:context=".Busan">
 
     <LinearLayout
         android:id="@+id/layoutheader"
@@ -28,9 +28,58 @@
             android:layout_marginEnd="30dp"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="관광지"
+            android:text="지역"
             android:textSize="20sp"
             android:textStyle="bold"></TextView>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/regionheader"
+        android:layout_width="match_parent"
+        android:layout_height="?actionBarSize"
+        android:background="@drawable/underline_background"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:padding="5dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/layoutheader">
+
+        <Button
+            android:id="@+id/regionbtn1"
+            android:layout_width="95dp"
+            android:layout_height="match_parent"
+            android:text="서울"
+            android:textSize="18sp"
+            android:textStyle="bold">
+        </Button>
+        <Button
+            android:id="@+id/regionbtn2"
+            android:layout_width="95dp"
+            android:layout_height="match_parent"
+            android:backgroundTint="@color/teal_700"
+            android:text="경상"
+            android:textSize="18sp"
+            android:textColor="@color/white"
+            android:textStyle="bold">
+        </Button>
+        <Button
+            android:id="@+id/regionbtn3"
+            android:layout_width="95dp"
+            android:layout_height="match_parent"
+            android:text="강원"
+            android:textSize="18sp"
+            android:textStyle="bold">
+        </Button>
+        <Button
+            android:id="@+id/regionbtn4"
+            android:layout_width="95dp"
+            android:layout_height="match_parent"
+            android:text="전남"
+            android:textSize="18sp"
+            android:textStyle="bold">
+        </Button>
+
+
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
@@ -42,7 +91,7 @@
         android:padding="5dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/layoutheader"
+        app:layout_constraintTop_toBottomOf="@+id/regionheader"
         app:layout_constraintVertical_bias="0.0"
         tools:layout_editor_absoluteX="-134dp">
 
