--- a/app/src/main/res/layout/activity_gwanghwamun.xml
+++ b/app/src/main/res/layout/activity_gwanghwamun.xml
@@ -25,11 +25,12 @@
 
         <TextView
             android:id="@+id/detail_name"
-            android:layout_width="100dp"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="130dp"
+            android:textAlignment="center"
+            android:layout_marginStart="90dp"
             android:text="이름"
-            android:textSize="22sp"
+            android:textSize="20sp"
             android:textStyle="bold"></TextView>
 
         <Button
@@ -63,11 +64,11 @@
 
 
                 <ImageView
-                    android:id="@+id/imageView22"
+                    android:id="@+id/detail_img"
                     android:layout_width="match_parent"
                     android:layout_height="250dp"
                     android:scaleType="centerCrop"
-                    app:srcCompat="@drawable/gwanghwamunimg" />
+                    app:srcCompat="@drawable/landmark" />
 
                 <TextView
                     android:id="@+id/detail_name2"
@@ -106,7 +107,7 @@
 
                 <com.github.mikephil.charting.charts.BarChart
                     android:id="@+id/barChart"
-                    android:layout_margin="10dp"
+                    android:layout_margin="20dp"
                     android:layout_width="match_parent"
                     android:layout_height="300dp">
                 </com.github.mikephil.charting.charts.BarChart>
@@ -125,7 +126,7 @@
 
                 <com.github.mikephil.charting.charts.PieChart
                     android:id="@+id/piechart"
-                    android:layout_margin="10dp"
+                    android:layout_margin="20dp"
                     android:layout_width="match_parent"
                     android:layout_height="300dp">
                 </com.github.mikephil.charting.charts.PieChart>
