--- a/app/src/main/res/layout/activity_landmark_recycle.xml
+++ b/app/src/main/res/layout/activity_landmark_recycle.xml
@@ -11,7 +11,6 @@
         android:id="@+id/layoutheader"
         android:layout_width="match_parent"
         android:layout_height="?actionBarSize"
-        android:background="#f0f0f0"
         android:gravity="center_vertical"
         android:orientation="horizontal"
         android:padding="10dp"
@@ -31,14 +30,14 @@
             android:layout_weight="1"
             android:gravity="center"
             android:text="내 위치 주변"
-            android:textSize="22sp"
+            android:textSize="20sp"
             android:textStyle="bold"></TextView>
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/sortheader"
         android:layout_width="match_parent"
-        android:layout_height="?actionBarSize"
+        android:layout_height="50dp"
         android:layout_marginTop="56dp"
         android:background="@drawable/underline_background"
         android:gravity="center_vertical"
@@ -48,7 +47,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -57,7 +55,7 @@
             android:layout_weight="1"
             android:gravity="center"
             android:text="정렬"
-            android:textSize="20sp"
+            android:textSize="18sp"
             android:textStyle="bold">
 
         </TextView>
@@ -70,7 +68,7 @@
             android:layout_weight="1"
             android:gravity="center"
             android:text="지도"
-            android:textSize="20sp"
+            android:textSize="18sp"
             android:textStyle="bold"></TextView>
     </LinearLayout>
 
