--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -286,15 +286,15 @@
 
                     <ImageView
                         android:id="@+id/imageView12"
-                        android:layout_width="140dp"
-                        android:layout_height="100dp"
+                        android:layout_width="144dp"
+                        android:layout_height="101dp"
                         android:background="@drawable/white_background"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintVertical_bias="0.0"
-                        app:srcCompat="@drawable/land1" />
+                        app:srcCompat="@drawable/ducksugung" />
 
                     <TextView
                         android:id="@+id/textView9"
@@ -304,7 +304,7 @@
                         android:layout_marginTop="8dp"
                         android:layout_marginEnd="16dp"
                         android:layout_marginBottom="8dp"
-                        android:text="숭례문"
+                        android:text="덕수궁"
                         android:textAlignment="center"
                         android:textSize="18sp"
                         android:textStyle="bold"
@@ -326,16 +326,15 @@
 
                     <ImageView
                         android:id="@+id/imageView13"
-                        android:layout_width="150dp"
-                        android:layout_height="80dp"
+                        android:layout_width="140dp"
+                        android:layout_height="100dp"
                         android:background="@drawable/white_background"
-                        android:padding="0dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintVertical_bias="0.18"
-                        app:srcCompat="@drawable/land2" />
+                        app:layout_constraintVertical_bias="0.0"
+                        app:srcCompat="@drawable/dehackro" />
 
                     <TextView
                         android:id="@+id/textView10"
@@ -345,7 +344,7 @@
                         android:layout_marginTop="8dp"
                         android:layout_marginEnd="16dp"
                         android:layout_marginBottom="8dp"
-                        android:text="명동"
+                        android:text="대학로"
                         android:textAlignment="center"
                         android:textSize="18sp"
                         android:textStyle="bold"
@@ -376,7 +375,7 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintVertical_bias="0.0"
-                        app:srcCompat="@drawable/land3" />
+                        app:srcCompat="@drawable/gyeongbokgung" />
 
                     <TextView
                         android:id="@+id/textView11"
@@ -386,7 +385,7 @@
                         android:layout_marginTop="8dp"
                         android:layout_marginEnd="16dp"
                         android:layout_marginBottom="8dp"
-                        android:text="DDP"
+                        android:text="경복궁"
                         android:textAlignment="center"
                         android:textSize="18sp"
                         android:textStyle="bold"
@@ -458,14 +457,16 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        app:srcCompat="@drawable/btn_3" />
+                        app:srcCompat="@drawable/ic_castle"
+                        app:tint="@color/gray" />
+
 
                     <TextView
                         android:id="@+id/textView13"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="4dp"
-                        android:text="북마크"
+                        android:text="관광지"
                         android:textColor="#616161"
                         android:textAlignment="center"
                         android:textSize="12sp" />
@@ -506,6 +507,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="22dp"
                         android:layout_weight="1"
+                        app:tint="@color/gray"
                         app:srcCompat="@drawable/marker" />
 
                     <TextView
