--- a/app/src/main/res/layout/activity_landmark_recycle.xml
+++ b/app/src/main/res/layout/activity_landmark_recycle.xml
@@ -48,6 +48,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
+            android:id="@+id/sortbtn"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
